# Postgres

./: pyproject.toml
homework-1/: create_tables.sql  main.py
homework-2/: filter_sorting.sql  groupby.sql  simple_queries.sql
homework-3/: queries.sql
homework-4/: alter_northwind.sql  alter_student.sql
