[tool.poetry]
name = "postgres-homework"
version = "0.1.0"
description = "sql"
authors = ["DariaBushueva <bushueva84@yandex.ru>"]
readme = "README.md"
packages = [{include = "postgres_homework"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
